manifestfiles3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surya007
  namespace: my1000namespace
spec:
  selector:
    app: surya007
  type: LoadBalancer
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: surya007
    protocol: TCP
    port: 80
    targetPort: 5000
